--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@ header{
     justify-content: center;
     flex-flow: column;
 }
+header p{
+    color: white
+    ;
+}
 
 header .user img{
     height: 17rem;
@@ -213,13 +217,99 @@ header .navbar ul li a:hover{
     color: #fff;
 }
 
+.about .skill-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+
+}
+
+.about .skill-container .skill:hover img{
+    transform: scale(1.2);
+}
+
+ .portfolio .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+ }
+
+ .portfolio .box-container .box{
+    height: 20rem;
+    width: 26rem;
+    border-radius: 1rem;
+    margin: 2rem;
+    overflow: hidden;
+    cursor: pointer;
+ }
+
+ .portfolio .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+ }
+
+ .portfolio .box-container .box:hover img{
+    transform: scale(1.2);
+ }
+
+ .contact .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+ }
+
+.contact .row .content{
+    flex: 1 1 30rem;
+    padding: 4rem;
+    padding-bottom: 0;
+}
+
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 2rem;
+    margin: 2rem;
+    padding-bottom: 4rem;
+}
+
+.contact .row form .box{
+    padding: 1.5rem;
+    margin: 1rem 0;
+    background: #3333;
+    color: #fff;
+    text-transform: none;
+    font-size: 1.7rem;
+    width: 100%;
+}
+
+.contact .row form .message{
+
+height: 15rem;
+resize: none;
+}
+
+.contact .row .content .title{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 3rem;
+    padding-bottom: 2rem;
+}
+
+.contact .row .content .info h3{
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    color: #eee;
+    padding: 1rem 0;
+    font-weight: normal;
 
 
-
-
-
-
-
+}
 
 
 
@@ -244,6 +334,7 @@ header .navbar ul li a:hover{
 
 
 /*media queries*/
+
 @media(max-width:1200px){
     html{
         font-size: 55%;
@@ -261,7 +352,7 @@ header .navbar ul li a:hover{
         }        
 
     #menu{
-        display: block;
+        display: none;
     }
 
     header.toggle{
@@ -285,4 +376,8 @@ header .navbar ul li a:hover{
     header{
         width: 100vw;
     }        
+
+    .portfolio .box-container .box{
+        width: 100%;
+    }
 }
